--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.collab-proxy": "2.2.0",
+    "com.unity.formats.fbx": "5.0.0",
     "com.unity.ide.rider": "3.0.25",
     "com.unity.ide.visualstudio": "2.0.21",
+    "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.render-pipelines.universal": "15.0.7",
     "com.unity.test-framework": "1.3.9",
